terminal clean ups

--- a/editors/html.html
+++ b/editors/html.html
@@ -25,7 +25,7 @@ version: 1.0.0
 		<div class="half code-half">
 			<div class="code-box">
 				<div class="tab">
-					<img class="lang-icon" src="{{ site.baseurl }}/icons/languages/{{ page.extension }}.svg">
+					<img class="lang-icon" src="{{ site.baseurl }}/img/languages/{{ page.extension }}.svg">
 					<span class="tab-title">{{ page.title }}</span>
 				</div>
 				<textarea id="{{ page.extension }}-editor"></textarea>
