--- a/editors/befunge.html
+++ b/editors/befunge.html
@@ -1,5 +1,5 @@
 ---
-title: "Befunge"
+title: "Befunge-93"
 extension: "bf"
 bin: "bef"
 options: "-q"
@@ -26,7 +26,7 @@ version: 1.0.0
 		<div class="half code-half">
 			<div class="code-box">
 				<div class="tab">
-					<img class="lang-icon" src="{{ site.baseurl }}/icons/languages/{{ page.extension }}.png">
+					<img class="lang-icon" src="{{ site.baseurl }}/img/languages/{{ page.extension }}.png">
 
 					<span class="tab-title">{{ page.title }}</span>
 
@@ -36,25 +36,25 @@ version: 1.0.0
 				</div>
 				<textarea id="{{ page.extension }}-editor"></textarea>
 				<div class="samples-dropdown">
-					<div class="sample-option" data-sample="commas">Hello World with excessive commas</div>
-					<div class="sample-option" data-sample="loop">Hello World with comma loop</div>
-					<div class="sample-option" data-sample="trampoline">Hello World with trampoline</div>
-					<div class="sample-option" data-sample="random3">Random number from 1-3</div>
-					<div class="sample-option" data-sample="random5">Random number from 1-5</div>
+					<div class="sample-option" data-sample="commas">"Hello World" with excessive commas</div>
+					<div class="sample-option" data-sample="loop">"Hello World" with comma loop</div>
+					<div class="sample-option" data-sample="bridge">"Hello World" with bridge</div>
+					<div class="sample-option" data-sample="random3">Generate random number from 1-3</div>
+					<div class="sample-option" data-sample="random9">Generate random number from 1-9</div>
 					<div class="sample-option" data-sample="pi">Generate 100 digits of pi</div>
 				</div>
 			</div>
 		</div>
 
 		<div class="half result-half">
-			<div class="console-container">
+			<div class="terminal-container">
 				<div class="tab">
-					<span class="tab-title iconless-tab-title">Console</span>
+					<span class="tab-title iconless-tab-title">Terminal</span>
 					<div class="result-btn-container">
-						<button class="tab-btn console-clear-btn"><i class="far fa-trash-alt"></i>Clear Console</button>
+						<button class="tab-btn terminal-clear-btn"><i class="far fa-trash-alt"></i>Clear Terminal</button>
 					</div>
 				</div>
-				<div id="console"></div>
+				<div id="terminal"></div>
 			</div>
 		</div>
 	</div>
@@ -75,56 +75,6 @@ version: 1.0.0
 			indentUnit: 4,
 			indentWithTabs: true,
 			autoRefresh: true
-		});
-
-
-
-		// Specific samples
-		$(".sample-option").click(function() {
-			var sample = $(this).attr("data-sample");
-			switch (sample) {
-				case "commas":
-					sampleCode = `\"dlrow olleH\" ,,,,,,,,,,, @`;
-					break;
-				case "loop":
-					sampleCode = `v
-
-                  v  ,  <
-
->   \"dlrow olleH\" >  :  |
-
-                        @`;
-					break;
-				case "trampoline":
-					sampleCode = `"dlrow olleH">:#,_@`;
-					break;
-				case "":
-					sampleCode = `
-
-					`;
-					break;
-				case "random3":
-					sampleCode = `v
-
-  >   v
-  1
-> ? 2 > .@
-  3
-  >   ^`;
-					break;
-				case "random5":
-					sampleCode = `1 v > v > v > v > v
-  > ? > ? > ? > ? > .@
-    1 + 1 + 1 + 1 +
-    > ^ > ^ > ^ > ^`;
-					break;
-				case "pi":
-					sampleCode = `"^a&EPm=kY}t/qYC+i9wHye$m N@~x+"v
-"|DsY<"-"z6n<[Yo2x|UP5VD:">:#v_@>
--:19+/"0"+,19+%"0"+,      ^  >39*`;
-			}
-			sampleCode.substring(1);
-			{{ page.extension }}.setValue(sampleCode);
 		});
 	</script>
 	{% include run-js.html %}
