--- a/editors/lolcode.html
+++ b/editors/lolcode.html
@@ -25,7 +25,7 @@ version: 1.0.0
 		<div class="half code-half">
 			<div class="code-box">
 				<div class="tab">
-					<img class="lang-icon" src="{{ site.baseurl }}/icons/languages/{{ page.extension }}.png">
+					<img class="lang-icon" src="{{ site.baseurl }}/img/languages/{{ page.extension }}.png">
 
 					<span class="tab-title">{{ page.title }}</span>
 
@@ -43,14 +43,14 @@ version: 1.0.0
 		</div>
 
 		<div class="half result-half">
-			<div class="console-container">
+			<div class="terminal-container">
 				<div class="tab">
-					<span class="tab-title iconless-tab-title">Console</span>
+					<span class="tab-title iconless-tab-title">Terminal</span>
 					<div class="result-btn-container">
-						<button class="tab-btn console-clear-btn"><i class="far fa-trash-alt"></i>Clear Console</button>
+						<button class="tab-btn terminal-clear-btn"><i class="far fa-trash-alt"></i>Clear Terminal</button>
 					</div>
 				</div>
-				<div id="console"></div>
+				<div id="terminal"><div class="log-waiting"></div></div>
 			</div>
 		</div>
 	</div>
@@ -72,46 +72,6 @@ version: 1.0.0
 			indentWithTabs: true,
 			scrollPastEnd: true,
 			autoRefresh: true
-		});
-
-
-
-		// Specific samples
-		$(".sample-option").click(function() {
-			var sample = $(this).attr("data-sample");
-			switch (sample) {
-				case "visible":
-					sampleCode = `HAI 1.3
-	VISIBLE \"Hello world!\"
-KTHXBYE`;
-					break;
-				case "increment":
-					sampleCode = `HAI 1.3
-	I HAS A var ITZ 0
-	IM IN YR loop UPPIN YR var TIL BOTH SAEM var AN 10
-		VISIBLE SUM OF var AN 1
-	IM OUTTA YR loop
-KTHXBYE`;
-					break;
-				case "exponent":
-					sampleCode = `HAI 1.3
-	HOW IZ I exponentFunction YR base AN YR exp
-		I HAS A index ITZ 0
-		I HAS A total ITZ 1
-
-		IM IN YR loop UPPIN YR index TIL BOTH SAEM index AN exp
-			total R PRODUKT OF total AN base
-		IM OUTTA YR loop
-
-		FOUND YR total
-	IF U SAY SO
-		
-	VISIBLE I IZ exponentFunction YR 2 AN YR 4 MKAY
-KTHXBYE`;
-					break;
-			}
-			sampleCode.substring(1);
-			{{ page.extension }}.setValue(sampleCode);
 		});
 	</script>
 	{% include run-js.html %}
