javascript theme fix

--- a/editors/web.html
+++ b/editors/web.html
@@ -170,7 +170,7 @@ config: true
 		});
 
 		var js = CodeMirror.fromTextArea(document.getElementById("js-editor"), {
-			mode: "text/js",
+			mode: "text/javascript",
 			theme: "kokomo-syntax",
 			lineWrapping: true,
 			lineNumbers: true,
