--- a/editors/lolcode.html
+++ b/editors/lolcode.html
@@ -35,7 +35,7 @@ version: 1.0.0
 				</div>
 				<textarea id="{{ page.extension }}-editor"></textarea>
 				<div class="samples-dropdown">
-					<div class="sample-option" data-sample="visible">Hello World</div>
+					<div class="sample-option" data-sample="visible">"Hello World"</div>
 					<div class="sample-option" data-sample="increment">Count 1-10</div>
 					<div class="sample-option" data-sample="exponent">Calculate Exponent</div>
 				</div>
